GUI-1293: Center-align table columns with item counts.  Link object counts on buckets landing page to bucket contents view.  Remove extra table column on security groups landing page to fix GUI-1392

--- a/eucaconsole/static/css/pages/groups.css
+++ b/eucaconsole/static/css/pages/groups.css
@@ -49,9 +49,11 @@
 
 .gridwrapper .table { border: none; width: 100%; }
 .gridwrapper .table thead tr { background-color: #f5f5f5; }
-.gridwrapper .table thead tr th { padding-top: 0.5rem; padding-bottom: 0.5rem; vertical-align: top; color: #444444; text-transform: uppercase; }
+.gridwrapper .table thead tr th { padding-top: 0.5rem; padding-bottom: 0.5rem; padding-left: 6px; padding-right: 0; vertical-align: top; color: #444444; text-transform: uppercase; }
 .gridwrapper .table thead tr th.actions { text-align: right; }
+.gridwrapper .table thead tr th.count { text-align: center; }
 .gridwrapper .table tr { border-bottom: 1px solid #ddd; }
+.gridwrapper .table tr td.count { text-align: center; }
 .gridwrapper .table th { white-space: nowrap; }
 .gridwrapper .table tr { position: relative; width: 100%; }
 .gridwrapper .table tr td { position: relative; padding: 8px 4px 8px 6px; vertical-align: top; }
